--- a/MuseumOfCandy/app.css
+++ b/MuseumOfCandy/app.css
@@ -41,6 +41,11 @@ body{
 	font-size: 4rem;
 }
 
+.navbar .scrolled{
+	background:rgb(222,192,222);
+	transition: background 500ms;
+}
+
 @media(max-width: 1200px){
 #headingGroup h1
 {
@@ -51,4 +56,5 @@ body{
 
 .content{
 	margin-top:100px;
+	margin-bottom:100px;
 }
