--- a/MuseumOfCandy/app.css
+++ b/MuseumOfCandy/app.css
@@ -43,7 +43,6 @@ body{
 
 .navbar .scrolled{
 	background:rgb(222,192,222);
-	transition: background 500ms;
 }
 
 @media(max-width: 1200px){
@@ -53,8 +52,15 @@ body{
 	font-size: 3rem;
 }
 }
-
 .content{
 	margin-top:100px;
 	margin-bottom:100px;
+}
+
+#mainNavbar .navbar-brand {
+
+  color: #ea1c2c;
+
+  font-size: 1.5rem;
+
 }
