Updated YelpCamp, added Version 2, included RESTful conventions, included the show each campground convention along with using MongoDB and Mongoose Package

--- a/webdevbootcamp/workspace/YelpCamp/v2/views/index.ejs
+++ b/webdevbootcamp/workspace/YelpCamp/v2/views/index.ejs
@@ -1,6 +1,5 @@
 <% include partials/header %>
 
-
 <div class="container">
     <header class="jumbotron">
         <div class="container">
@@ -21,6 +20,9 @@
                 <div class="caption">
                     <h4><%=  campground.name %></h4>
                 </div>
+                <p>
+                    <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                </p>
             </div>
         </div>
     <% }); %>
